Fix z-index hierarchy

--- a/src/less/components/sheet.less
+++ b/src/less/components/sheet.less
@@ -51,7 +51,7 @@
             position: sticky;
             top: 0;
             background-color: @white;
-            padding: 3rem 3rem 2rem 3rem;
+            padding: 3rem 3rem 2rem;
             z-index: 1000;
 
             .sheet-close {
@@ -80,7 +80,7 @@
         }
 
         .sheet-content {
-            padding: 0 3rem 3rem 3rem;
+            padding: 0 3rem 3rem;
 
             &.has-footer {
                 padding-bottom: 0;
@@ -95,7 +95,7 @@
             position: -webkit-sticky;
             bottom: 0;
             margin-top: auto;
-            padding: 2rem 3rem 2rem 3rem;
+            padding: 2rem 3rem;
             background-color: @white;
 
             button {
